fixed index page text spill

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,7 @@ body,h1,h2,h3,h4,h5, p {
     text-align: left;
     font-size: 48px;
     margin-left: 10px;
+    margin-top: -15px
 }
 
 .index-sub_header{
